# NdoFiOracle

./: CMakeLists.txt  README.md
Bundle/: Bundle.C  Bundle.h  MPSolver.h  makefile
CutPlane/: CutPlane.C  CutPlane.h  makefile
LukFi/: CMakeLists.txt  LukFiOrcl.C  LukFiOrcl.h  makefile  makefile-c
LukFi/test/: ParValue-Bundle-OSIMP  ParValue-Bundle-QPPMP  ParValue-CutPlane  ParValue-SubGrad  makefile  test.cpp
MPTester/: MPTester.h  makefile
NDOSlver/: FiOracle.h  NDOSlver.h  makefile
OPTUtils/: OPTUtils.h  OPTtypes.h  OPTvect.h
OSIMPSolver/: OSIMPSolver.C  OSIMPSolver.h  makefile
QPPnltMP/: BMinQuad.C  BMinQuad.h  MinQuad.C  MinQuad.h  QPPnltMP.C  QPPnltMP.h  makefile
SubGrad/: Deflection.h  Stepsize.h  SubGrad.C  SubGrad.h  makefile  makefile-c
SubGrad/Deflection/: PrimalDual.h  Volume.h
SubGrad/Stepsize/: ColorTV.h  FumeroTV.h  Polyak.h
TestFi/: CMakeLists.txt  TestFi.C  TestFi.h  makefile
TestFi/test/: ParValue-Bundle-OSIMP  ParValue-Bundle-QPPMP  ParValue-CutPlane  ParValue-SubGrad  makefile  test.cpp
cmake/: FindCPLEX.cmake  FindClp.cmake  FindCoinUtils.cmake  FindGUROBI.cmake  FindOsi.cmake  NDOFiOracleConfig.cmake.in
extlib/: makefile-default-paths  makefile-libCPX  makefile-libGRB  makefile-libOSI
lib/: makefile  makefile-c  makefile-inc  makefile-lib
